kubernetes/apps/selfhosted/searxng/app/networkpolicy.yaml
---
# This allows access to coredns in kube-system namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: searxng-allow-dns
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
# This allows access to external sites.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: searxng-allow-https
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: searxng
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - port: 443
          protocol: TCP
